@@ -4840,7 +4840,7 @@ name|HiveConf
 operator|.
 name|ConfVars
 operator|.
-name|HIVEPARTITIONPRUNER
+name|HIVEMAPREDMODE
 argument_list|)
 operator|.
 name|equalsIgnoreCase
@@ -16136,7 +16136,7 @@ name|HiveConf
 operator|.
 name|ConfVars
 operator|.
-name|HIVEPARTITIONPRUNER
+name|HIVEMAPREDMODE
 argument_list|)
 operator|.
 name|equalsIgnoreCase
@@ -17522,6 +17522,59 @@ expr_stmt|;
 block|}
 block|}
 block|}
+name|int
+name|numReds
+init|=
+operator|-
+literal|1
+decl_stmt|;
+comment|// Use only 1 reducer in case of cartesian product
+if|if
+condition|(
+name|reduceKeys
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|0
+condition|)
+block|{
+name|numReds
+operator|=
+literal|1
+expr_stmt|;
+comment|// Cartesian product is not supported in strict mode
+if|if
+condition|(
+name|conf
+operator|.
+name|getVar
+argument_list|(
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVEMAPREDMODE
+argument_list|)
+operator|.
+name|equalsIgnoreCase
+argument_list|(
+literal|"strict"
+argument_list|)
+condition|)
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|NO_CARTESIAN_PRODUCT
+operator|.
+name|getMsg
+argument_list|()
+argument_list|)
+throw|;
+block|}
 name|ReduceSinkOperator
 name|rsOp
 init|=
@@ -17552,8 +17605,7 @@ operator|.
 name|size
 argument_list|()
 argument_list|,
-operator|-
-literal|1
+name|numReds
 argument_list|)
 argument_list|,
 operator|new
