@@ -1,0 +1,3 @@
+set hive.mapred.mode=strict;
+
+SELECT *  FROM src src1 JOIN src src2;
