@@ -1,4 +1,4 @@
-set hive.partition.pruning=strict;
+set hive.mapred.mode=strict;
 
 EXPLAIN
 SELECT src.key, src.value from src order by src.key;
