@@ -1,0 +1,162 @@
+ABSTRACT SYNTAX TREE:
+  (TOK_QUERY (TOK_FROM (TOK_JOIN (TOK_TABREF src src1) (TOK_TABREF src src2))) (TOK_INSERT (TOK_DESTINATION (TOK_DIR TOK_TMP_FILE)) (TOK_SELECT (TOK_SELEXPR TOK_ALLCOLREF)) (TOK_WHERE (and (< (. (TOK_TABLE_OR_COL src1) key) 10) (< (. (TOK_TABLE_OR_COL src2) key) 10)))))
+
+STAGE DEPENDENCIES:
+  Stage-1 is a root stage
+  Stage-0 is a root stage
+
+STAGE PLANS:
+  Stage: Stage-1
+    Map Reduce
+      Alias -> Map Operator Tree:
+        src2 
+            Reduce Output Operator
+              sort order: 
+              tag: 1
+              value expressions:
+                    expr: key
+                    type: string
+                    expr: value
+                    type: string
+        src1 
+            Reduce Output Operator
+              sort order: 
+              tag: 0
+              value expressions:
+                    expr: key
+                    type: string
+                    expr: value
+                    type: string
+      Reduce Operator Tree:
+        Join Operator
+          condition map:
+               Inner Join 0 to 1
+          condition expressions:
+            0 {VALUE.0} {VALUE.1}
+            1 {VALUE.0} {VALUE.1}
+          Filter Operator
+            predicate:
+                expr: ((UDFToDouble(0) < UDFToDouble(10)) and (UDFToDouble(2) < UDFToDouble(10)))
+                type: boolean
+            Select Operator
+              expressions:
+                    expr: 0
+                    type: string
+                    expr: 1
+                    type: string
+                    expr: 2
+                    type: string
+                    expr: 3
+                    type: string
+              File Output Operator
+                compressed: false
+                GlobalTableId: 0
+                table:
+                    input format: org.apache.hadoop.mapred.TextInputFormat
+                    output format: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+
+  Stage: Stage-0
+    Fetch Operator
+      limit: -1
+
+
+5	val_5	2	val_2
+5	val_5	5	val_5
+5	val_5	9	val_9
+5	val_5	4	val_4
+5	val_5	8	val_8
+5	val_5	0	val_0
+5	val_5	5	val_5
+5	val_5	5	val_5
+5	val_5	0	val_0
+5	val_5	0	val_0
+0	val_0	2	val_2
+0	val_0	5	val_5
+0	val_0	9	val_9
+0	val_0	4	val_4
+0	val_0	8	val_8
+0	val_0	0	val_0
+0	val_0	5	val_5
+0	val_0	5	val_5
+0	val_0	0	val_0
+0	val_0	0	val_0
+8	val_8	2	val_2
+8	val_8	5	val_5
+8	val_8	9	val_9
+8	val_8	4	val_4
+8	val_8	8	val_8
+8	val_8	0	val_0
+8	val_8	5	val_5
+8	val_8	5	val_5
+8	val_8	0	val_0
+8	val_8	0	val_0
+0	val_0	2	val_2
+0	val_0	5	val_5
+0	val_0	9	val_9
+0	val_0	4	val_4
+0	val_0	8	val_8
+0	val_0	0	val_0
+0	val_0	5	val_5
+0	val_0	5	val_5
+0	val_0	0	val_0
+0	val_0	0	val_0
+2	val_2	2	val_2
+2	val_2	5	val_5
+2	val_2	9	val_9
+2	val_2	4	val_4
+2	val_2	8	val_8
+2	val_2	0	val_0
+2	val_2	5	val_5
+2	val_2	5	val_5
+2	val_2	0	val_0
+2	val_2	0	val_0
+5	val_5	2	val_2
+5	val_5	5	val_5
+5	val_5	9	val_9
+5	val_5	4	val_4
+5	val_5	8	val_8
+5	val_5	0	val_0
+5	val_5	5	val_5
+5	val_5	5	val_5
+5	val_5	0	val_0
+5	val_5	0	val_0
+5	val_5	2	val_2
+5	val_5	5	val_5
+5	val_5	9	val_9
+5	val_5	4	val_4
+5	val_5	8	val_8
+5	val_5	0	val_0
+5	val_5	5	val_5
+5	val_5	5	val_5
+5	val_5	0	val_0
+5	val_5	0	val_0
+0	val_0	2	val_2
+0	val_0	5	val_5
+0	val_0	9	val_9
+0	val_0	4	val_4
+0	val_0	8	val_8
+0	val_0	0	val_0
+0	val_0	5	val_5
+0	val_0	5	val_5
+0	val_0	0	val_0
+0	val_0	0	val_0
+9	val_9	2	val_2
+9	val_9	5	val_5
+9	val_9	9	val_9
+9	val_9	4	val_4
+9	val_9	8	val_8
+9	val_9	0	val_0
+9	val_9	5	val_5
+9	val_9	5	val_5
+9	val_9	0	val_0
+9	val_9	0	val_0
+4	val_4	2	val_2
+4	val_4	5	val_5
+4	val_4	9	val_9
+4	val_4	4	val_4
+4	val_4	8	val_8
+4	val_4	0	val_0
+4	val_4	5	val_5
+4	val_4	5	val_5
+4	val_4	0	val_0
+4	val_4	0	val_0
